--- a/package.json
+++ b/package.json
@@ -32,8 +32,6 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@types/node": "^20.6.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -44,27 +42,29 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "prettier": "^3.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-dts": "^3.5.4"
   },
   "dependencies": {
-    "@lexical/clipboard": "0.12.2",
-    "@lexical/code": "0.12.2",
-    "@lexical/file": "0.12.2",
-    "@lexical/hashtag": "0.12.2",
-    "@lexical/link": "0.12.2",
-    "@lexical/list": "0.12.2",
-    "@lexical/mark": "0.12.2",
-    "@lexical/overflow": "0.12.2",
-    "@lexical/plain-text": "0.12.2",
-    "@lexical/react": "0.12.2",
-    "@lexical/rich-text": "0.12.2",
-    "@lexical/selection": "0.12.2",
-    "@lexical/table": "0.12.2",
-    "@lexical/utils": "0.12.2",
+    "@lexical/clipboard": "0.12.4",
+    "@lexical/code": "0.12.4",
+    "@lexical/file": "0.12.4",
+    "@lexical/hashtag": "0.12.4",
+    "@lexical/link": "0.12.4",
+    "@lexical/list": "0.12.4",
+    "@lexical/mark": "0.12.4",
+    "@lexical/overflow": "0.12.4",
+    "@lexical/plain-text": "0.12.4",
+    "@lexical/react": "^0.12.4",
+    "@lexical/rich-text": "0.12.4",
+    "@lexical/selection": "0.12.4",
+    "@lexical/table": "0.12.4",
+    "@lexical/utils": "0.12.4",
     "katex": "^0.16.8",
-    "lexical": "0.12.2",
+    "lexical": "0.12.4",
     "lodash-es": "^4.17.21",
     "mathlive": "^0.95.5",
     "use-child": "^1.0.0"
